--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Seminario de Matemática Aplicada UC</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+      <h2>Este es un espacio dedicado a la divulgación de diferentes trabajos de Matemática Aplicada de la UC</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- #hero -->
