--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Areas</h2>
+          <p>There are many applications of mathematical methods by different fields such as physics, engineering, medicine, biology, computer science, industry and others.</p>
         </div>
 
         <div class="row">
