--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-          <li><a class="nav-link scrollto" href="#about">Personas</a></li>
+          <li><a class="nav-link scrollto" href="#about">¿Quienes somos?</a></li>
           <li><a class="nav-link scrollto" href="#services">Areas</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Fotos</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#team">Personas</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
