--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="hero-container">
       <h1>Seminario de Matemática Aplicada UC</h1>
       <h2>Este es un espacio dedicado a la divulgación de diferentes trabajos de Matemática Aplicada de la UC</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#about" class="btn-get-started scrollto">Empecemos</a>
     </div>
   </section><!-- #hero -->
 
