--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Seminario de Matemática Aplicada UC</h1>
-      <h2>Este es un espacio dedicado a la divulgación de diferentes trabajos de Matemática Aplicada de la UC</h2>
+      <h2>Este espacio está dedicado a la divulgación científica sobre diferentes tópicos de Matemática Aplicada de la Universidad Católica</h2>
       <a href="#about" class="btn-get-started scrollto">Empecemos</a>
     </div>
   </section><!-- #hero -->
@@ -101,7 +101,7 @@
             <img src="assets/img/about-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>La Matemática como herramienta para entender el mundo y el camino a la solución de grandes problemáticas.</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
